--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@sap-cloud-sdk/resilience": "^4",
     "@sap-cloud-sdk/util": "^4",
     "@sap/cds": "^9",
-    "express": "^4"
+    "express": "^4",
+    "@sap/xssec": "^4",
+    "@cap-js/hana": "^2"
   },
   "engines": {
     "node": ">=20"
@@ -44,13 +46,19 @@
       "API_BUSINESS_PARTNER": {
         "kind": "odata-v2",
         "model": "srv/external/API_BUSINESS_PARTNER"
-      }
+      },
+      "[production]": {
+        "auth": "xsuaa",
+        "db": "hana"
+      },
+      "html5-runtime": true
     }
   },
   "devDependencies": {
     "@cap-js/cds-test": "^0.4.0",
     "@cap-js/cds-types": "^0.13.0",
-    "@cap-js/sqlite": "^2"
+    "@cap-js/sqlite": "^2",
+    "@sap/cds-dk": ">=8"
   },
   "scripts": {
     "test": "npx jest tests/test.js",
